# scrape-kit

./: .gitignore  BUG_REPORT.md  LICENSE  README.md  Scrape-Kitv2.md  __init__.py  errors.py  fetcher.py  matching.py  pyproject.toml  requirements.txt  ruff-fix-output.txt  settings.py  storage.py  v2_diff.txt
.github/workflows/: CI.yml  ci-config.toml
badges/: .gitkeep
scrape_kit/: __init__.py  config.py  db.py  dedup.py  errors.py  exceptions.py  fetcher.py  finder.py  logger.py  matching.py  page.py  scraper.py  session.py  settings.py  similarity.py  storage.py
tests/: test_config.py  test_db.py  test_fetcher.py  test_logger.py  test_matching.py  test_scraper.py  test_settings.py  test_similarity.py  test_storage.py
