[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-kit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PyYAML",
    "rapidfuzz",
    "scrapling[fetchers]",
    "pandas",
]
[tool.setuptools.packages.find]
# Discovers scrape_kit/ automatically.
# When you add sub-packages (e.g. scrape_kit/fetchers/) they are picked
# up without any changes here.
where = ["."]
include = ["scrape_kit*"]
